@@ -80,6 +80,10 @@ rpm.install		= /opt/OpenNMS
 rpm.sign		= false
 # rpm.buildtests:	whether to build the test classes
 rpm.buildtests		= false
+# rpm.tomcatdir:	where tomcat is installed
+rpm.tomcatdir		= /var/tomcat4
+# rpm.tomcatuser:	user that tomcat runs as
+rpm.tomcatuser		= root
 
 install.database.driver   = org.postgresql.Driver
 install.database.url      = jdbc:postgresql://localhost:5432/opennms?compatible=7.1
