@@ -1,7 +1,8 @@
 1.1.2 to 1.1.3
 ----------------------------------------------------------------------
-- Modified plugins and polloers to uses Socket.connect w/ timeout rather than
-  SocketChannels.  Bug 784
+- Added some build changes to support SuSE. Thx Deej. Bug 712
+- Modified plugins and polloers to uses Socket.connect w/ timeout 
+  rather than SocketChannels.  Bug 784
 - Updated dtd link in web.xml. Thx Xavier. Bug 813
 - Added a small workaround to "import" issues in jsps. Bug 820
 - Fixed "unary operator" issue on CentOS (RHES) in opennms.sh. Bug 795
